--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": "https://github.com/gulitsky/eth-rub-oracle/issues",
   "license": "MIT",
   "author": "Андрей Гулицкий <andrey@gulitsky.me> (https://gulitsky.me)",
-  "main": "truffle-config.js",
+  "main": "truffle.js",
   "directories": {
     "test": "./test/"
   },
@@ -28,16 +28,16 @@
     "lint": "run-p lint:*",
     "lint:js": "standard --verbose | snazzy",
     "lint:sol": "solium --dir ./contracts/",
-    "ganache:run": "docker run --name ganache -d -p 8545:8545 trufflesuite/ganache-cli -a 5",
+    "ganache:run": "docker run --name ganache -d -p 8545:8545 trufflesuite/ganache-cli -a 2",
     "ganache:stop": "docker rm -f ganache",
-    "oraclize:run": "docker run --name oraclize -d --network host gulitsky/oraclize -a 4",
+    "oraclize:run": "docker run --name oraclize --network host -d gulitsky/oraclize -a 1 --dev",
     "oraclize:stop": "docker rm -f oraclize",
-    "test": "run-s ganache:run oraclize:run oraclize:stop ganache:stop"
+    "test-env:setup": "npm run ganache:run && npm run oraclize:run",
+    "test-env:destroy": "npm run oraclize:stop; npm run ganache:stop",
+    "test": "npm run test-env:setup && truffle test --show-events; npm run test-env:destroy"
   },
   "devDependencies": {
     "dotenv": "^5.0.1",
-    "npm-run-all": "^4.1.3",
-    "openzeppelin-solidity": "1.9.0",
     "snazzy": "^7.1.1",
     "solium": "^1.1.7",
     "standard": "^11.0.1",
